--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     implementation("org.mariadb.jdbc:mariadb-java-client")
     implementation('com.h2database:h2')
     implementation('org.springframework.boot:spring-boot-starter-mustache')
+    implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
 
 }
