--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,26 @@
 language: java
 jdk:
-  -openjdk8
+  - openjdk8
 
-
-
+#1
 branches:
   only:
     - master
 
-
-# Travis CI 서버의 Home #Travis 카드등록
-
+# Travis CI 서버의 Home
+#2
 cache:
   directories:
-    - '$HOME/ .m2/repository'
+    - '$HOME/.m2/repository'
     - '$HOME/.gradle'
 
+before_install:
+  - chmod +x gradlew
+
+#3
 script: "./gradlew clean build"
 
-
-# CI완료시 메일로 알람
-
+#4
 notifications:
   email:
     recipients:
