--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,24 @@ before_install:
 #3
 script: "./gradlew clean build"
 
+#5
+before_deploy: # (1)
+  - zip -r freelec-springboot2-webservice * # (2)
+  - mkdir -p deploy # (3)
+  - mv freelec-springboot2-webservice.zip deploy/freelec-springboot2-webservice.zip # (4)
+
+#6
+deploy: # (5)
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY # Travis repo setting에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo setting에 설정된 값
+    bucket: tobenix-springboot-build # S3 버킷
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private # zip 파일 접근을 private으로
+    local_dir: deploy # before_deploy에서 생성한 디렉토리 # (6)
+    wait-until-deployed: true
+
 #4
 notifications:
   email:
